# The-Evolution-of-Todo-app

./: .mcp.json  CLAUDE.md  COMPLETION_SUMMARY.md  LICENSE  MCP_SETUP_SUMMARY.md  README.md  check_and_create_tables.py  check_neon_tables.py  check_phase5_tables.py  package.json  pyproject.toml
.claude/: mcp_config.json  settings.local.json
.claude/agents/: ai-agent-engineer.md  cloud-deployment-engineer.md  console-dev.md  database-specialist.md  devops-engineer.md  event-systems-dev.md  fastapi-backend-dev.md  nextjs-frontend-dev.md
.claude/mcp/: README.md  config.json  requirements.txt  server.py  start.sh
.claude/skills/ai-agent-dev/: SKILL.md
.claude/skills/cloud-infrastructure/: SKILL.md
.claude/skills/container-orchestration/: SKILL.md
.claude/skills/database-engineer/: SKILL.md
.claude/skills/event-driven-arch/: SKILL.md
.claude/skills/fullstack-web-dev/: SKILL.md
.claude/skills/python-console-dev/: SKILL.md
.claude/skills/qa-testing/: SKILL.md
.specify/agents/: claude-context-phase1.md
.specify/memory/: constitution.md
app/: auth.py  main.py
app/(protected)/chat/: page.tsx
app/(protected)/tasks/: page.tsx
components/: ChatMessage.tsx  TaskForm.tsx  TaskList.tsx
history/prompts/001-ai-chatbot/: 0001-ai-powered-todo-chatbot-spec.spec.prompt.md  0002-ai-chatbot-implementation-plan.plan.prompt.md  0003-ai-chatbot-tasks-generation.tasks.prompt.md  001-generate-ai-chatbot-tasks.tasks.prompt.md  002-implement-ai-chatbot-features.implementation.prompt.md
history/prompts/001-console-todo/: 2-create-phase-i-console-app-spec.spec.prompt.md  3-create-impl-plan-for-phase-i.plan.prompt.md  4-create-task-breakdown-for-phase-i.tasks.prompt.md  5-complete-implementation-of-phase-i.impl.prompt.md
history/prompts/001-full-stack-auth/: 001-create-full-stack-auth-spec.spec.prompt.md  002-create-full-stack-auth-plan.plan.prompt.md  003-create-full-stack-auth-tasks.tasks.prompt.md  004-complete-full-stack-auth-implementation.tasks.prompt.md
history/prompts/001-k8s-minikube-deployment/: 0001-k8s-minikube-deployment-spec.spec.prompt.md  0002-k8s-minikube-deployment-plan.plan.prompt.md  0003-k8s-minikube-deployment-tasks.tasks.prompt.md  002-execute-implementation-plan.general.prompt.md
history/prompts/advanced-cloud-deployment/: 001-advanced-cloud-deployment-spec.spec.prompt.md  002-advanced-cloud-deployment-plan.plan.prompt.md  003-generate-tasks-md-phase-v.tasks.prompt.md  004-execute-implementation-plan-phase-v.green.prompt.md  005-generate-tasks-md-phase-v.tasks.prompt.md  006-update-dependencies-to-use-uv.green.prompt.md
history/prompts/constitution/: 1-create-todo-evolution-hackathon-ii.constitution.prompt.md
lib/: auth.ts  chatApi.ts
mcp_env/: pyvenv.cfg
phase-1/: .gitignore  README.md  pyproject.toml
phase-1/src/: main.py  models.py  task_manager.py  ui.py  utils.py
phase-1/tests/: test_models.py  test_task_manager.py
phase-2/: README.md  test-functionalities.md
phase-2/backend/: .env  .env_example
phase-2/frontend/: package-lock.json  package.json  proxy.ts
phase-3/: CLAUDE.md  README.md  integration-summary.md  verify-implementation.py
phase-3/backend/: pyproject.toml  requirements.txt
phase-3/backend/app/: auth.py  main.py  models.py
phase-3/backend/app/routes/: __init__.py  tasks.py
phase-3/backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
phase-3/backend/tests/: test_chat.py  test_integration.py
phase-3/frontend/: package-lock.json  package.json
phase-3/mcp_server/: mcp_server.py  pyproject.toml  requirements.txt
phase-3/mcp_server/src/: server.py  tools.py
phase-3/mcp_server/tests/: test_tools.py
phase-4/: AI_TOOLS_DOCUMENTATION.md  CLAUDE.md  README.md  demo-and-verification.md  logs.txt  quickstart.md  troubleshooting-and-optimization.md
phase-4/docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  mcp-server.Dockerfile
phase-4/k8s/: configmap.yaml  namespace.yaml  secret.yaml
phase-4/scripts/: build-images.sh  deploy-minikube.sh  setup-minikube.sh  test-ai-tools.sh  test-docker-compose.sh  test-helm-chart.sh  test-helm-upgrade.sh  test-k8s-resources.sh  validate-k8s-manifests.sh
phase-5/: CLAUDE.md  DEPENDENCIES_WITH_UV.md  IMPLEMENTATION_SUMMARY.md  README.md  demo-video-script.md  quickstart.md
phase-5/backend/: pyproject.toml  requirements.txt
phase-5/backend/app/: agent.py  dapr_jobs_scheduler.py  dapr_publisher.py  database.py  kafka_producer.py  main.py  migrations.py  models.py  websocket.py
phase-5/backend/app/migrations/versions/: 002_advanced_features.py  003_audit_log.py
phase-5/backend/app/routes/: __init__.py  auth.py  chat.py  reminders.py  tasks.py
phase-5/backend/todo_backend_v5.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
phase-5/docker/: README.md  audit-service.Dockerfile  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  notification-service.Dockerfile  recurring-task-service.Dockerfile  redpanda.Dockerfile  websocket-service.Dockerfile
phase-5/scripts/: deploy-aks.sh  deploy-cloud.sh  deploy-minikube-v5.sh  install-dependencies-with-uv.sh
phase-5/services/audit-service/: pyproject.toml
phase-5/services/audit-service/src/: main.py
phase-5/services/notification-service/: pyproject.toml
phase-5/services/notification-service/src/: main.py
phase-5/services/recurring-task-service/: Dockerfile  pyproject.toml  requirements.txt
phase-5/services/recurring-task-service/src/: main.py
phase-5/services/websocket-service/: pyproject.toml  requirements.txt
phase-5/services/websocket-service/src/: main.py
specs/001-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-full-stack-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-k8s-minikube-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-advanced-cloud-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+117 files in other folders)
