[project]
name = "todo-console-app"
version = "0.1.0"
description = "A console-based todo application with in-memory storage"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[project.scripts]
todo-app = "src.main:main"