[project]
name = "todo-mcp-server"
version = "0.1.0"
description = "MCP server for AI-powered todo chatbot"
authors = [
    {name = "Todo App Team", email = "team@example.com"},
]
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlmodel>=0.0.8",
    "pydantic>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
todo-mcp-server = "src.server:main"