[project]
name = "todo-backend-v5"
version = "0.1.0"
description = "Backend for the Advanced Cloud Deployment Todo application with event-driven architecture"
authors = [{ name = "Developer", email = "developer@example.com" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlmodel>=0.0.8",
    "psycopg2-binary>=2.9.7",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.1.0",
    "bcrypt>=4.0.0",
    "better-auth>=0.0.1b11",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "kafka-python>=2.0.2",
    "dapr-ext-fastapi>=1.9.0",
    "dapr>=1.9.0",
    "sse-starlette>=1.8.2",
    "asyncer>=0.0.5",
    "pgvector>=0.2.5",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
    "pytest-asyncio>=0.21.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
    "pytest-asyncio>=0.21.1",
]